[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupynium>=0.2.7",
    "jupyter>=1.1.1",
    "jupytext>=1.17.3",
    "llvmlite>=0.45.1",
    "marimo>=0.17.8",
    "matplotlib>=3.10.7",
    "nbclassic>=1.3.3",
    "nbformat>=5.10.4",
    "notebook>=7.4.7",
    "numba>=0.62.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "py-lets-be-rational",
    "py-vollib",
    "pysabr>=0.4.1",
    "scipy>=1.16.2",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
py-lets-be-rational = { git = "https://github.com/vollib/py_lets_be_rational.git" }
py-vollib = { git = "https://github.com/vollib/py_vollib.git" }

[tool.marimo.runtime]
watcher_on_save = "autorun"
